# LessonDL

./: .gitignore  CMakeLists.txt  Makefile  README.md  accessors.cpp  conf.py  exercise_01.cpp  exercise_03.cpp  hello_tf.cpp  hello_world.cpp  prefabricated_project_1.ipynb  requirements_DL.txt  simple-vector-add.cpp  test_speed_big.py  testspeed1.cpp
TestOpenCV/: CMakeLists.txt  test.cpp
TestOpenCV1/: CMakeLists.txt  main.cpp
TestOpenCV2/: CMakeLists.txt  main.cpp
TestOpenCV3/: CMakeLists.txt  main.cpp
check_drivers/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  LessonDL  build.ninja  check.cpp  cmake_install.cmake  hello_world.cpp
cpp/: CMakeLists.txt  hello.cpp  hello_tf  test.cpp  test_speed1.cpp
cpp/check_torch/: CMakeLists.txt
cpp/check_torch_cpu/: main.cpp
cpp/check_torch_cuda/: main.cpp
cpp/exercise_000/: CMakeLists.txt  main.cpp
cpp/exercise_001/: CMakeLists.txt
cpp/exercise_002/: main.cpp
cpp/hello_tf/: hello_tf.cpp
cpp/tensorflow-cc-examples/: hello-world.cpp
cpp/test_speed/: test_speed0.cpp
cpp/test_speed_2/: test_speed_2.cpp
example_000/: main.cpp
example_001/: main.cpp
example_001ru/: main.cpp
example_002/: main.cpp
example_002ru/: main.cpp
example_003ru/: main.cpp
exercise/: CMakeLists.txt  driver.py  example_000.cpp  example_001.cpp  example_003.cpp  test_speed.py  testspeed.cpp
exercise_000/: CMakeLists.txt  main.cpp
exercise_001/: CMakeLists.txt  main.cpp  main.py
exercise_002/: CMakeLists.txt  main.cpp  main.py
exercise_02/: exercise_02.cpp
hello_tf/: CMakeLists.txt
python/: example_test_gpu.ipynb  example_test_gpu.py  exercise_001.ipynb  test_speed.py
python/.ipynb_checkpoints/: example_test_gpu-checkpoint.ipynb
python/tensorflow/: beginner.ipynb  classification.ipynb
python/tensorflow/.ipynb_checkpoints/: beginner-checkpoint.ipynb  classification-checkpoint.ipynb
search_device/: main.cpp
simple-sycl-app/: CMakeLists.txt  simple-sycl-app.cpp
tensorflow-cc-examples/: hello-world.cpp
test/: CMakeLists.txt  hello  hello-cpp  hello-cpp.cpp  hello.c
test_perfomance/: CMakeLists.txt  main.cpp  main.py
test_perfomance_pytorch/: CMakeLists.txt  main.cpp  main.py  main1.txt
test_perfomance_tensorflow/: CMakeLists.txt  main.cpp  main.py  main_cpu.cpp
test_speed_000/: main.cpp
test_speed_001/: main.cpp
test_speed_002_cpu/: main.cpp
